--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "expo": "^43.0.0",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
@@ -16,6 +20,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
+    
   },
   "private": true
 }
